# macroquad-sandbox

./: Cargo.toml  README.md
assets/: glider.igs
examples/: balls.rs  fluid_sim.rs  game_of_life.rs  map_viewer.rs  movable.rs  noise.rs  rts.rs  ui.rs
params/game-of-life/: basic.toml
src/: collider.rs  fluid.rs  gol.rs  lib.rs  quad.rs  state.rs  tracks.rs  transnet.rs
src/fluid/: mod.rs
src/mqx/: drawx.rs  frames.rs  input.rs  mod.rs  plot.rs
src/rts/: mod.rs  pathfinding.rs  universe.rs  world_map.rs
src/ufo/: map.rs  mod.rs
