[package]
name = "macroquad-sandbox"
version = "0.1.0"
edition = "2021"
authors = ["Krzysztof Langner <klangner@gmail.com>"]
description = "macroquad examples"
license = "MIT OR Apache-2.0"


[dependencies]
macroquad = "0.4.14"
mapgen = "0.5"
rand = "0.8"
glam="0.20"
pathfinding = "3.0"
noise="0.7"
mp4 = "0.13"
toml = "0.8"
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
